--- a/stacker/templates/cloudformation.template
+++ b/stacker/templates/cloudformation.template
@@ -192,7 +192,7 @@ template = ->
                         "SERVER_ROLE='master'\n",
                         "PROMPT_COLOR=\"", {Ref: "promptColor"}, "\"\n"
                         "SUMO_USERNAME=\"", {Ref: "sumoUsername"}, "\"\n"
-                        "SUMO_PASSWORD=\"", {Ref: "sumoPassword"}, "\"\n"
+                        "SUMO_PASSWORD=\'", {Ref: "sumoPassword"}, "\'\n"
                         "SIGNAL_URL=\"", { Ref: "SlaveWaitHandle" }, "\"\n"
                     ]]}}
 
@@ -208,7 +208,7 @@ template = ->
                         "SERVER_ROLE='slave'\n",
                         "PROMPT_COLOR=\"", {Ref: "promptColor"}, "\"\n",
                         "SUMO_USERNAME=\"", {Ref: "sumoUsername"}, "\"\n"
-                        "SUMO_PASSWORD=\"", {Ref: "sumoPassword"}, "\"\n"
+                        "SUMO_PASSWORD=\'", {Ref: "sumoPassword"}, "\'\n"
                         "SIGNAL_URL=\"", { Ref: "SlaveWaitHandle" }, "\"\n",
                         "MASTER_IP=\"", { 'Fn::GetAtt' : [ "SlaveWaitCondition", "Data" ]}, "\"\n"
                     ]]}}
