--- a/stacker/tasks/chroot_hook.yml
+++ b/stacker/tasks/chroot_hook.yml
@@ -31,6 +31,7 @@
 
 - command: rm -fr /tmp/spark/.git
 - command: mv /tmp/spark /opt/
+- command: mv /opt/spark/conf/log4j.properties.template /opt/spark/conf/log4j.properties
 
 - name: Downloading Scala
   get_url: url=http://www.scala-lang.org/files/archive/scala-{{ scala_version }}.tgz
