--- a/stacker/tasks/chroot_hook.yml
+++ b/stacker/tasks/chroot_hook.yml
@@ -19,6 +19,9 @@
 - name: Installing SumoLogic Collector
   command: dpkg -i /tmp/sumocollector_{{ sumo_version }}_amd64.deb
 
+- name: Enabling SumoLogic
+  command: insserv collector
+
 - file: path=/tmp/spark state=absent
 
 - name: Cloning Spark {{ spark_version }}
