--- a/stacker/vars/vars.yml
+++ b/stacker/vars/vars.yml
@@ -4,7 +4,7 @@ scala_version: "2.9.3"
 sumo_version: "19.69-6"
 
 spark_repo: "https://github.com/celtra/incubator-spark.git"
-spark_version: "c88a9916a183e7a57b53537531620bbde6d8869a"
+spark_version: "v0.8.1-incubating"
 
 debian_version: "wheezy"
 
