--- a/stacker/templates/cloudformation.template
+++ b/stacker/templates/cloudformation.template
@@ -129,7 +129,7 @@ template = ->
                     }]
                     Tags: [{
                         Key: 'stack-name'
-                        Value: 'stack-test'
+                        Value: { Ref: 'clusterName' }
                     }]
 
             SlaveSecurityGroup:
@@ -149,7 +149,7 @@ template = ->
                     }]
                     Tags: [{
                         Key: 'stack-name'
-                        Value: 'stack-test'
+                        Value: { Ref: 'clusterName' }
                     }]
             
             ## Cannot tag, cannot set Resource field so we have permission to delete all of them
@@ -203,7 +203,7 @@ template = ->
                             'autoscaling:EC2_INSTANCE_TERMINATE_ERROR']
                     Tags: [{
                         Key: 'stack-name'
-                        Value: 'stack-test'
+                        Value: { Ref: 'clusterName' }
                         PropagateAtLaunch: true
                     }]
 
@@ -228,7 +228,7 @@ template = ->
                             'autoscaling:EC2_INSTANCE_TERMINATE_ERROR']
                     Tags: [{
                         Key: 'stack-name'
-                        Value: 'stack-test'
+                        Value: { Ref: 'clusterName' }
                         PropagateAtLaunch: true
                     }]
 
