--- a/stacker/vars/vars.yml
+++ b/stacker/vars/vars.yml
@@ -1,10 +1,10 @@
 ---
 
-scala_version: "2.10.3"
+scala_version: "2.9.3"
 sumo_version: "19.74-1"
 
-spark_repo: "https://github.com/apache/spark.git"
-spark_version: "v0.9.0-incubating"
+spark_repo: "https://github.com/apache/incubator-spark.git"
+spark_version: "v0.8.1-incubating"
 
 debian_version: "wheezy"
 
