--- a/stacker/aws/cloudformation.template
+++ b/stacker/aws/cloudformation.template
@@ -88,6 +88,10 @@ template = ->
                                 'c1.xlarge','cc1.4xlarge','cc2.8xlarge','cg1.4xlarge']
                 ConstraintDescription: 'Must be a valid EC2 instance type.'
 
+            driverSecurityGroup:
+                Description: "Security group of the instance you will be running driver from"
+                Type: 'String'
+                Default: 'analytics'
 
         Resources:
             ## ACL cannot be set on WaitConditionHandle
@@ -126,6 +130,11 @@ template = ->
                         FromPort: 22
                         ToPort: 22
                         CidrIp: '0.0.0.0/0'
+                    },{
+                        IpProtocol: 'tcp'
+                        FromPort: 0
+                        ToPort: 65535
+                        SourceSecurityGroupName: { Ref: 'driverSecurityGroup' }
                     }]
                     Tags: [{
                         Key: 'stack-name'
