--- a/stacker/image.yml
+++ b/stacker/image.yml
@@ -4,10 +4,6 @@
 
   tasks:
 
-    #- service: name=spark enabled=yes
-    - name: Enabling spark
-      command: insserv spark
-
     - name: Installing apt packages
       apt: pkg={{ item }} update_cache=yes
       with_items: apt_packages
@@ -22,8 +18,18 @@
     - name: Installing SumoLogic Collector
       command: dpkg -i /tmp/sumocollector_{{ sumo_version }}_amd64.deb
 
-    - name: Enabling SumoLogic
-      command: insserv collector
+    - name: Configuring collectd
+      template: src=etc/collectd.conf dest=/etc/collectd.conf owner=root group=root mode=644
+
+    - name: Downloading collectd
+      get_url: url='http://files.celtra.com.s3.amazonaws.com/debian/wheezy/collectd_5.4.1-celtra-7_amd64.deb' dest=/tmp/collectd_5.4.1-celtra-7_amd64.deb
+
+    - name: Installing collectd
+      command: dpkg --force-confold -i /tmp/collectd_5.4.1-celtra-7_amd64.deb
+
+    - name: Enabling Services
+      service: name={{ item }} enabled=yes
+      with_items: [ 'spark', 'collector', 'collectd' ]
 
     - file: path=/tmp/spark state=absent
 
