--- a/stacker/config/config.yml.dist
+++ b/stacker/config/config.yml.dist
@@ -27,7 +27,7 @@ slaveAutoScalingMax: "4"
 slaveMaxSpotPrice: "0.3"
 sumoUsername: ""
 sumoPassword: ""
-monitorEndpoint: "monitor.celtra.com"
-monitorPrefix: "test.celtra"
+metricsEndpoint: "monitor.celtra.com"
+metricsPrefix: "test.celtra"
 
 ssh_private_key: "/home/user/.ssh/celtra_test_ec2instances.pem"
