Deps (cherry picked from commit 6d88ba32c580156f9fcd1410b608c703f08199d6)

--- a/stacker/group_vars/all.yml
+++ b/stacker/group_vars/all.yml
@@ -14,7 +14,9 @@ apt_packages:
     - iptraf
     - joe
     - less
+    - libpcap0.8
     - libpcre3
+    - libprotobuf-c0
     - lsof
     - mc
     - mdadm
