Fix quotation and use headless jre

--- a/stacker/group_vars/all.yml
+++ b/stacker/group_vars/all.yml
@@ -21,6 +21,7 @@ apt_packages:
     - mc
     - mdadm
     - ntp
+    - openjdk-7-jre-headless
     - openjdk-7-jdk
     - openssh-server
     - parted
