--- a/stacker/image.yml
+++ b/stacker/image.yml
@@ -8,9 +8,6 @@
       apt: pkg={{ item }} update_cache=yes
       with_items: apt_packages
 
-    - name: Removing avahi-daemon
-      apt: pkg=avahi-daemon state=absent purge=yes
-
     - name: Downloading SumoLogic Collector
       get_url: url=http://files.celtra.com.s3.amazonaws.com/sumologic/sumocollector_{{ sumo_version }}_amd64.deb
                 dest=/tmp/sumocollector_{{ sumo_version }}_amd64.deb mode=0440
@@ -25,7 +22,7 @@
       command: dpkg --force-confold -i /tmp/collectd_5.4.1-celtra-7_amd64.deb
 
     - name: Downloading Spark
-      get_url: url='http://files.celtra.com/spark/spark-1.0.1-bin-hadoop2.4-httpclient4.2.tgz dest='/tmp/spark-1.0.1-bin-hadoop2.4-httpclient4.2.tgz'
+      get_url: url='http://files.celtra.com/spark/spark-1.0.1-bin-hadoop2.4-httpclient4.2.tgz' dest='/tmp/spark-1.0.1-bin-hadoop2.4-httpclient4.2.tgz'
 
     - name: Unpacking Spark
       command: tar -C /opt/spark --strip-components=1 -xzf /tmp/spark-1.0.1-bin-hadoop2.4-httpclient4.2.tgz
